# temp-conv

./: .justfile  Cargo.toml  LICENSE.md  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-windows.yml  ci.yml  docs.yml  release.yml
src/: cli.rs  error.rs  formatted_output.rs  lib.rs  main.rs  temperature.rs
