[package]
name = "temp-conv"
authors = ["baumbus"]
version = "0.3.0"
edition = "2021"
description = "A simple cli-based unit converter for temperatures"
readme = "README.md"
repository = "https://github.com/baumbus/temp-conv"
license = "MIT"
keywords = ["cli", "units", "converter"]
categories = ["command-line-utilities"]
exclude = ["tests/", ".github/", "target/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive", "serde_derive"] }
serde_json = "1.0.120"

[profile.dev]
opt-level = 0
overflow-checks = false
debug = false
codegen-units = 256

[profile.release]
opt-level = 'z'
strip = true
lto = true
codegen-units = 256
