[package]
name = "temp-conv"
authors = ["baumbus"]
version = "0.5.4"
edition = "2021"
description = "A simple cli-based unit converter for temperatures"
readme = "README.md"
repository = "https://github.com/baumbus/temp-conv"
license = "MIT"
keywords = ["cli", "units", "converter"]
categories = ["command-line-utilities"]
exclude = ["tests/", ".github/", "target/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.3", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.120", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
thiserror = "1.0.63"
toml = { version = "0.8.14", optional = true }
# test-case = "3.3.1"
# pretty_assertions = "1.4.0"
# rstest = "0.21.0"
# assert_float_eq = "1.1.3"

[dev-dependencies]
test-case = "3.3.1"
pretty_assertions = "1.4.0"
rstest = "0.21.0"
assert_float_eq = "1.1.3"

[features]
default = ["json", "yaml", "toml"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]

[profile.dev]
opt-level = 0
overflow-checks = false
debug = false
codegen-units = 256

[profile.release]
opt-level = 'z'
strip = true
lto = true
codegen-units = 256
